align correct

--- a/scss/main.css
+++ b/scss/main.css
@@ -2058,6 +2058,55 @@ table {
   }
 }
 
+#aboutPage {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../images/David-background.jpg);
+  background-size: cover;
+}
+
+#aboutPage .container {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+
+#aboutPage .container .row .test {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+#aboutPage .container .row .test .ladyANDlogo {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#aboutPage .container .row .test .ladyANDlogo #logoImage {
+  width: 18vw;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+#aboutPage .container .row .test .ladyANDlogo #lady {
+  height: 90vh;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
 body {
   font-size: 1.6rem;
 }
